<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color_light">

        <TextView
            android:id="@+id/tvDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/block_ann"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDialog" />

        <EditText
            android:id="@+id/etCause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/block_ann"
            android:hint="@string/block_ann_default_text"

            android:maxLength="200"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/tvDialog"
            app:layout_constraintStart_toStartOf="@id/tvDialog"
            app:layout_constraintTop_toBottomOf="@id/listView" />


        <ImageButton
            android:id="@+id/btn1"
            android:layout_width="48dp"
            android:layout_height="62dp"
            android:layout_margin="16dp"
            android:background="@drawable/custom_button_background"
            android:contentDescription="@string/block"
            android:elevation="8dp"
            android:padding="8dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_block"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCause" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:elevation="12dp"
            android:text="@string/button_block"
            android:textColor="@color/brown"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@id/btn1"
            app:layout_constraintStart_toStartOf="@id/btn1"
            app:layout_constraintTop_toTopOf="@id/btn1" />

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btn1"
            app:layout_constraintEnd_toEndOf="@id/btn1"
            app:layout_constraintStart_toStartOf="@id/btn1"
            app:layout_constraintTop_toTopOf="@id/btn1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>