<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color_dark"
    tools:context=".ui.fragments.showApplication.ShowApplicationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/theme_color_dark"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/showPhotoViewPagerPB"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/showPhotoViewPager"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/showPhotoTabLayout"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@color/invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:textSize="@dimen/text_data_size"
            android:textColor="@color/theme_color_light"
            app:layout_constraintEnd_toEndOf="@id/cardView"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            tools:text="werfdsvd"
            />

        <ProgressBar
            android:id="@+id/pbUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            android:indeterminateTint="@color/action_bar_color"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tvData"
            app:layout_constraintEnd_toEndOf="@id/tvData"
            app:layout_constraintStart_toStartOf="@id/tvData"
            app:layout_constraintTop_toTopOf="@id/tvData"
            tools:visibility="visible" />


        <ImageButton
            android:id="@+id/btnLoc"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_button_background"
            android:contentDescription="@string/description_loc_unselected"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_gps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvData"
            app:tint="@color/white" />


        <ImageView
            android:id="@+id/ivSelectCat"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_button_background"
            android:contentDescription="@string/description_select_cat"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_recycling"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnLoc"
            app:layout_constraintTop_toTopOf="@id/btnLoc"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvSetCat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:elevation="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/t_bold"
            android:gravity="center"
            android:lines="1"
            android:text="@string/item_found"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/ivSelectCat"
            app:layout_constraintEnd_toEndOf="@id/ivSelectCat"
            app:layout_constraintStart_toStartOf="@id/ivSelectCat"
            app:layout_constraintTop_toTopOf="@id/ivSelectCat" />

        <ImageButton
            android:id="@+id/btnTelNum"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/custom_button_background"
            android:contentDescription="@string/description_enter_tel_num"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_phone_calling"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivSelectCat" />

        <TextView
            android:id="@+id/tvShowTelNum"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:autofillHints="phone"
            android:elevation="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/t_bold"
            android:gravity="center"
            android:lines="1"
            android:text="@string/_375_45"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/btnTelNum"
            app:layout_constraintEnd_toEndOf="@id/btnTelNum"
            app:layout_constraintStart_toStartOf="@id/btnTelNum"
            app:layout_constraintTop_toTopOf="@id/btnTelNum" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="@drawable/custom_button_background"
            android:padding="16dp"
            android:text="@string/no_message"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTelNum" />

        <ImageButton
            android:id="@+id/ibMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_background"
            android:padding="16dp"
            android:text="@string/no_message"
            android:elevation="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"/>


        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids=" tvWarning, btnInfo, barrierInfoTop, barrierInfoBottom"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierInfoTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="tvWarning,btnInfo" />


        <TextView
            android:id="@+id/tvWarning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/blocked_add"
            android:textColor="#E31111"
            app:layout_constraintBottom_toTopOf="@id/barrierInfoBottom"
            app:layout_constraintEnd_toStartOf="@id/btnInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMessage" />

        <ImageButton
            android:id="@+id/btnInfo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_button_background"
            android:contentDescription="@string/tv_info"
            android:elevation="8dp"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toBottomOf="@id/tvWarning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvWarning"
            app:layout_constraintTop_toTopOf="@id/tvWarning" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierInfoBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tvWarning,btnInfo" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupButtonsEditAndDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids=" groupDelete, groupEdit"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="btnDelete, tvDelete" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_button_background"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_delete_full"
            app:layout_constraintEnd_toStartOf="@id/btnEdit"
            app:layout_constraintTop_toBottomOf="@id/barrierInfoBottom"
            app:layout_goneMarginTop="8dp"
            app:tint="@color/theme_color_stroke" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="9dp"
            android:fontFamily="@font/t_bold"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="4sp"
            app:layout_constraintBottom_toBottomOf="@id/btnDelete"
            app:layout_constraintEnd_toEndOf="@id/btnDelete"
            app:layout_constraintStart_toStartOf="@id/btnDelete"
            app:layout_constraintTop_toTopOf="@id/btnDelete" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btnEdit, tvEdit" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_button_background"
            android:contentDescription="@string/need_internet"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"
            app:layout_constraintTop_toBottomOf="@id/barrierInfoBottom"
            app:layout_goneMarginTop="8dp"
            app:tint="@color/theme_color_stroke" />

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="9dp"
            android:fontFamily="@font/t_bold"
            android:gravity="center"
            android:rotation="-45"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="4sp"
            app:layout_constraintBottom_toBottomOf="@id/btnEdit"
            app:layout_constraintEnd_toEndOf="@id/btnEdit"
            app:layout_constraintStart_toStartOf="@id/btnEdit"
            app:layout_constraintTop_toTopOf="@id/btnEdit" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupNoRules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:constraint_referenced_ids=" tvNoRules, , tvBlock, btnNoRules" />

        <TextView
            android:id="@+id/tvNoRules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/can_block"
            android:textColor="@color/input_background"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toStartOf="@id/btnNoRules"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnEdit"
            app:layout_goneMarginTop="48dp" />

        <ImageButton
            android:id="@+id/btnNoRules"
            android:layout_width="48dp"
            android:layout_height="62dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_button_background"
            android:contentDescription="@string/tv_info"
            android:elevation="8dp"
            android:padding="8dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_block"
            app:layout_constraintBottom_toBottomOf="@id/tvNoRules"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvNoRules"
            app:layout_constraintTop_toTopOf="@id/tvNoRules" />

        <TextView
            android:id="@+id/tvBlock"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:textSize="11sp"
            android:elevation="12dp"
            android:textColor="@color/brown"
            android:text="@string/button_block"
            app:layout_constraintStart_toStartOf="@id/btnNoRules"
            app:layout_constraintEnd_toEndOf="@id/btnNoRules"
            app:layout_constraintTop_toTopOf="@id/btnNoRules"/>



        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="groupNoRules, groupEdit, groupDelete" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

